saves/test/demo_full_20240802_193545/mt2015_q4/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp mt2015_q4_tb.v mt2015_q4.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
mt2015_q4_tb.v:96: $finish called at 570 (1ns)

iverilog cmd 2 error:

